[gd_scene load_steps=7 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Code/Mechant.gd" type="Script" id=2]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), null ],
"loop": true,
"name": "Walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "Death",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 0.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 31, 2 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 35, 31 )

[node name="Mechant" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Walk"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 31.5 )
shape = SubResource( 2 )

[node name="Floor_checker" type="RayCast2D" parent="."]
position = Vector2( 32, 0 )
enabled = true
collision_mask = 2

[node name="Tete" type="Area2D" parent="."]
position = Vector2( 0, -42 )
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tete"]
position = Vector2( 0, 9 )
shape = SubResource( 3 )

[node name="Cotes" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cotes"]
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="Tete" to="." method="_on_Tete_body_entered"]
[connection signal="body_entered" from="Cotes" to="." method="_on_Cotes_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
